@startuml

class UserController {
    updatePassword(User user)//1.更新密码
    login(User user)//2.登陆用户
    regist(User user)//3.注册用户
    activation(String activationCode)//4.1激活
    quit()//5.退出
}
UserController --> UserService
interface UserService{
	updatePassword(uid,oldPass,newPass)//1.更新密码
	login(User user)//2.登陆用户
	ajaxValidateLoginname(loginname)//3.1
	ajaxValidateEmail(email)//3.2
	regist(User user)//3.3
	activation(String code)//4.1激活
}
UserService --> UserDao
interface UserDao {
	findByUidAndLoginpass(map)//1.根据用户ID和密码查找
	findByLoginnameAndLoginpass(map)//2.根据登陆名和登录密码查找
	ajaxValidateLoginname(loginname)//3.1
	ajaxValidateEmail(email)//3.2
	add(user)//3.3
	findByCode(code)//4.1
	updateStatus(map)//4.1.2
}
UserDao --> User
class User{
	uid//用户主键
	loginname//登陆名
	loginpass//登陆密码
	email//油箱
	status//状态
	activationCode//激活码
	reloginpass//设置密码
	verifyCode//修改码
	newpass//新密码
}
@enduml